@@ -46,7 +46,7 @@
 .Op Fl x Ar pattern
 .Op Fl X Ar pattern
 .Op Fl z
-.Op Fl Z
+.Op Fl zz
 .Op Fl d Ar depth
 .Op Fl D
 .Op Fl E
@@ -189,11 +189,9 @@ options). This option can be useful for tools such as
 .Xr rsync 1
 to be able to recreate a full file tree when used with fpart (e.g. using
 rsync's --files-from option). See the
-.Fl Z
+.Fl zz
 option to also pack un-readable directories.
-.It Fl Z
-Implies
-.Fl z .
+.It Fl zz
 Treat un-readable directories as empty, causing them to be packed anyway.
 .It Ic -d Ar depth
 After a certain
