@@ -124,10 +124,9 @@ usage(void)
 #endif
     fprintf(stderr, "\n");
     fprintf(stderr, "Directory handling:\n");
-    fprintf(stderr, "  -z\tpack empty directories "
+    fprintf(stderr, "  -z\tpack empty directories too"
         "(default: pack files only)\n");
-    fprintf(stderr, "  -Z\ttreat un-readable directories as empty "
-        "(implies -z)\n");
+    fprintf(stderr, "  -zz\ttreat un-readable directories as empty\n");
     fprintf(stderr, "  -d\tpack directories instead of files after a certain "
         "<depth>\n");
     fprintf(stderr, "  -D\tpack leaf directories (i.e. containing files only, "
@@ -256,9 +255,9 @@ handle_options(struct program_options *options, int *argcp, char ***argvp)
     int ch;
     while((ch = getopt(*argcp, *argvp,
 #if defined(_HAS_FNM_CASEFOLD)
-        "?hVn:f:s:i:ao:0evlby:Y:x:X:zZd:DELw:W:p:q:r:"
+        "?hVn:f:s:i:ao:0evlby:Y:x:X:zd:DELw:W:p:q:r:"
 #else
-        "?hVn:f:s:i:ao:0evlby:x:zZd:DELw:W:p:q:r:"
+        "?hVn:f:s:i:ao:0evlby:x:zd:DELw:W:p:q:r:"
 #endif
         )) != -1) {
         switch(ch) {
@@ -390,11 +389,7 @@ handle_options(struct program_options *options, int *argcp, char ***argvp)
                 break;
             }
             case 'z':
-                options->empty_dirs = OPT_EMPTYDIRS;
-                break;
-            case 'Z':
-                options->dnr_empty = OPT_DNREMPTY;
-                options->empty_dirs = OPT_EMPTYDIRS;
+                options->dirs_include++;
                 break;
             case 'd':
             {
@@ -409,12 +404,10 @@ handle_options(struct program_options *options, int *argcp, char ***argvp)
             }
             case 'D':
                 options->leaf_dirs = OPT_LEAFDIRS;
-                options->empty_dirs = OPT_EMPTYDIRS;
                 break;
             case 'E':
                 options->dirs_only = OPT_DIRSONLY;
                 options->leaf_dirs = OPT_LEAFDIRS;
-                options->empty_dirs = OPT_EMPTYDIRS;
                 break;
             case 'L':
                 options->live_mode = OPT_LIVEMODE;
@@ -524,8 +517,7 @@ handle_options(struct program_options *options, int *argcp, char ***argvp)
             (options->include_files_ci != NULL) ||
             (options->exclude_files != NULL) ||
             (options->exclude_files_ci != NULL) ||
-            (options->empty_dirs != DFLT_OPT_EMPTYDIRS) ||
-            (options->dnr_empty != DFLT_OPT_DNREMPTY) ||
+            (options->dirs_include != DFLT_OPT_DIRSINCLUDE) ||
             (options->dir_depth != DFLT_OPT_DIR_DEPTH) ||
             (options->leaf_dirs != DFLT_OPT_LEAFDIRS) ||
             (options->dirs_only != DFLT_OPT_DIRSONLY)) {
@@ -551,6 +543,10 @@ handle_options(struct program_options *options, int *argcp, char ***argvp)
             "Option -E is incompatible with option -d.\n");
         return (FPART_OPTS_USAGE | FPART_OPTS_NOK | FPART_OPTS_EXIT);
     }
+
+    /* Options -D and -E imply empty dirs request (option -z) */
+    if(options->leaf_dirs == OPT_LEAFDIRS)
+        options->dirs_include = max(options->dirs_include, OPT_EMPTYDIRS);
 
     if((options->live_mode == OPT_NOLIVEMODE) &&
         ((options->pre_part_hook != NULL) ||
